[gd_scene load_steps=5 format=3 uid="uid://cwnesulk1ynqs"]

[ext_resource type="Script" path="res://ui/text_box/autoloads/text_box.gd" id="1_nl2j6"]
[ext_resource type="FontFile" uid="uid://cngg6h8sqnm6b" path="res://raw_assets/fonts/nintendo-nes-font.otf" id="2_g3uhx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aqt5c"]

[sub_resource type="FontVariation" id="FontVariation_t8io0"]
base_font = ExtResource("2_g3uhx")
spacing_glyph = -2
spacing_space = -4
spacing_top = 3

[node name="text_box" type="Node2D" node_paths=PackedStringArray("main_label", "box_anim", "delay_timer")]
script = ExtResource("1_nl2j6")
main_label = NodePath("main_label")
box_anim = NodePath("text_box")
delay_timer = NodePath("delay_timer")
delta_char = 5

[node name="text_box" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aqt5c")

[node name="temp_box" type="ColorRect" parent="text_box"]
offset_left = 14.0
offset_top = 138.0
offset_right = 182.0
offset_bottom = 190.0

[node name="temp_fill" type="ColorRect" parent="text_box"]
offset_left = 16.0
offset_top = 140.0
offset_right = 180.0
offset_bottom = 188.0
color = Color(0, 0, 0, 1)

[node name="main_label" type="Label" parent="."]
offset_left = 23.0
offset_top = 142.0
offset_right = 173.0
offset_bottom = 183.0
theme_override_fonts/font = SubResource("FontVariation_t8io0")
theme_override_font_sizes/font_size = 8
text = "default text"
autowrap_mode = 2

[node name="delay_timer" type="Timer" parent="."]
one_shot = true
